@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2022 DBeaver Corp and others
+ * Copyright (C) 2010-2023 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -60,6 +60,7 @@ import java.net.URLClassLoader;
 import java.net.URLDecoder;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardOpenOption;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -132,7 +133,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
 
         @Override
         public String toString() {
-            return file.getFileName().toString();
+            return file != null ? file.getFileName().toString() : this.id;
         }
     }
 
@@ -175,6 +176,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
     private DBPImage iconError;
     private DBPImage iconBig;
     private boolean embedded, origEmbedded;
+    private boolean supportsDistributedMode;
     private boolean singleConnection;
     private boolean clientRequired;
     private boolean supportsDriverProperties;
@@ -315,6 +317,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
             this.defaultConnectionProperties.putAll(copyFrom.defaultConnectionProperties);
             this.customConnectionProperties.putAll(copyFrom.customConnectionProperties);
             this.configurationTypes.addAll(copyFrom.configurationTypes);
+            this.supportsDistributedMode = copyFrom.supportsDistributedMode;
         } else {
             this.categories = new ArrayList<>();
             this.name = "";
@@ -352,6 +355,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
         this.origAnonymousAccess = this.anonymousAccess = CommonUtils.getBoolean(config.getAttribute(RegistryConstants.ATTR_ANONYMOUS));
         this.origAllowsEmptyPassword = this.allowsEmptyPassword = CommonUtils.getBoolean("allowsEmptyPassword");
         this.licenseRequired = CommonUtils.getBoolean(config.getAttribute(RegistryConstants.ATTR_LICENSE_REQUIRED));
+        this.supportsDistributedMode = CommonUtils.getBoolean(config.getAttribute(RegistryConstants.ATTR_SUPPORTS_DISTRIBUTED_MODE), true);
         this.custom = false;
         this.isLoaded = false;
 
@@ -681,7 +685,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
         this.driverClass = null;
         this.isLoaded = false;
 
-        if (!isDistributedMode()) {
+        if (!DBWorkbench.isDistributed()) {
             this.resolvedFiles.clear();
         }
     }
@@ -934,7 +938,19 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
     }
 
     public void setDriverLibraries(List<? extends DBPDriverLibrary> libs) {
+        List<DBPDriverLibrary> deletedLibs = new ArrayList<>();
+        for (DBPDriverLibrary lib : this.libraries) {
+            if (!lib.isCustom() && !libs.contains(lib)) {
+                lib.setDisabled(true);
+                deletedLibs.add(lib);
+            }
+        }
+        for (DBPDriverLibrary lib : libs) {
+            lib.setDisabled(false);
+        }
+
         this.libraries.clear();
+        this.libraries.addAll(deletedLibs);
         this.libraries.addAll(libs);
     }
 
@@ -983,16 +999,6 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
             return true;
         }
         return false;
-    }
-
-    public boolean removeDriverLibrary(DBPDriverLibrary lib) {
-        resetDriverInstance();
-        if (!lib.isCustom()) {
-            lib.setDisabled(true);
-            return true;
-        } else {
-            return this.libraries.remove(lib);
-        }
     }
 
     public void disabledAllDefaultLibraries() {
@@ -1076,6 +1082,9 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
 
     @Override
     public boolean isSupportedByLocalSystem() {
+        if (DBWorkbench.isDistributed() || DBWorkbench.getPlatform().getApplication().isMultiuser()) {
+            return supportsDistributedMode;
+        }
         if (supportedSystems.isEmpty()) {
             // Multi-platform
             return true;
@@ -1096,7 +1105,8 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
                 final Path licenseFile = file.getLocalFile();
                 if (licenseFile != null && Files.exists(licenseFile)) {
                     try {
-                        return Files.readString(licenseFile);
+                        // Use readAllBytes because readString may fail if file charset is inconsistent
+                        return new String(Files.readAllBytes(licenseFile));
                     } catch (IOException e) {
                         log.warn(e);
                     }
@@ -1118,7 +1128,9 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
 
     @Override
     public String getConnectionURL(@NotNull DBPConnectionConfiguration connectionInfo) {
-        if (isSampleURLForced()) {
+        if (connectionInfo.getConfigurationType() == DBPDriverConfigurationType.URL) {
+            return connectionInfo.getUrl();
+        } else if (isSampleURLForced()) {
             // Generate URL by template
             return JDBCURL.generateUrlByTemplate(this, connectionInfo);
         } else {
@@ -1272,7 +1284,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
 
     @NotNull
     private List<Path> validateFilesPresence(boolean resetVersions) {
-        if (isDistributedMode()) {
+        if (DBWorkbench.isDistributed()) {
             // We are in distributed mode
             return syncDistributedDependencies();
         }
@@ -1377,11 +1389,6 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
             }
         }
 
-        // Now check driver version
-        if (DBWorkbench.getPlatform().getPreferenceStore().getBoolean(ModelPreferences.UI_DRIVERS_VERSION_UPDATE) && !downloaded) {
-            // TODO: implement new version check
-        }
-
         // Check if local files are zip archives with jars inside
         return DriverUtils.extractZipArchives(result);
     }
@@ -1428,7 +1435,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
                         }
 
                         byte[] fileData = fileController.loadFileData(DBFileController.TYPE_DATABASE_DRIVER, fileInfo.getFile().toString());
-                        Files.write(localDriverFile, fileData, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.CREATE_NEW);
+                        Files.write(localDriverFile, fileData, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.CREATE);
 
                         localFilePaths.add(localDriverFile);
                     } catch (Exception e) {
@@ -1597,11 +1604,15 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
 
                 Path srcLocalFile = library.getLocalFile();
                 if (srcLocalFile == null) {
-                    log.warn("\t-Driver library file '" + library.getPath() + "' is missing");
+                    if (library.getType() != DBPDriverLibrary.FileType.license) {
+                        log.warn("\t-Driver '" + getFullId() + "' library file '" + library.getPath() + "' is missing");
+                    }
                     continue;
                 }
                 if (!Files.exists(srcLocalFile)) {
-                    log.warn("\tDriver library file '" + srcLocalFile.toAbsolutePath() + "' doesn't exist");
+                    if (library.getType() != DBPDriverLibrary.FileType.license) {
+                        log.warn("\tDriver '" + getFullId() + "' library file '" + srcLocalFile.toAbsolutePath() + "' doesn't exist");
+                    }
                     continue;
                 }
 
@@ -1696,7 +1707,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
         if (info.fileCRC != targetCRC) {
             // Copy file
             try {
-                Files.copy(srcLocalFile, trgLocalFile);
+                Files.copy(srcLocalFile, trgLocalFile, StandardCopyOption.REPLACE_EXISTING);
             } catch (IOException e) {
                 log.error("Error copying library file '" + srcLocalFile + "' into '" + trgLocalFile + "'", e);
                 return null;
@@ -1779,10 +1790,6 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
             }
         }
         return libraries.toArray(new String[0]);
-    }
-
-    static boolean isDistributedMode() {
-        return DBWorkbench.getPlatform().getApplication().isDistributed();
     }
 
 }
